--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1><span class="auto-type"></span></h1>
-        <button class="auto-type-btn">Read a Novel</button>
+        <a href="/novel" class="auto-type-btn">Read a Novel</a>
     </div>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
